[package]
name = "nosotros"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
hex = "0.4.3"
rand = "0.9.2"
secp256k1 = { version = "0.31.1", features = ["rand", "hashes"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = "2.5.7"
