[package]
name = "nosotros"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
bech32 = "0.11.0"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["events"] }
dirs = "6.0.0"
futures-util = "0.3.31"
hex = "0.4.3"
rand = "0.9.2"
rand_core = "0.9.3"
ratatui = "0.29.0"
secp256k1 = { version = "0.31.1", features = ["rand", "hashes"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4.4"
